<resources>
    <string name="app_name">AnimationApp</string>
    <string name="zoom">zoom</string>
    <string name="clockwise">clockwise</string>
    <string name="fade">fade</string>
    <string name="blink">blink</string>
    <string name="move">move</string>
    <string name="slide">slide</string>
    <string name="hello_world">Hello world</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="todo">TODO</string>
</resources>